--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test project",
   "main": "",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
   "author": "vanek",
   "license": "ISC",
@@ -12,9 +14,16 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/node": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "jest": "^24.9.0"
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0"
   }
 }
